--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 11s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-7
+    PS_UUID: e5fa5de0-e27d-11e8-bd38-d9007380520a
+  - provision_time: 1m 11s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
