--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,92 @@
 results:
   -
-    body: |-
+    body: >-
+      # Tests 
+       - ✔ Device is online
+       - ✖ Balena host OS update [2.15.1+rev2.prod -> 2.26.0+rev1.prod]
+       - ✖ Identification LED
+       - ✖ child test left in queue: t.test Push a mono-container to the application
+       - ✖ child test left in queue: t.test Enter running application container
+       - ✖ child test left in queue: t.test Sync application container
+       - ✖ child test left in queue: t.test Update device status with resin-device-progress
+       - ✖ child test left in queue: t.test Update supervisor through the API
+       - ✖ child test left in queue: t.test Push a multi-container application
+       - ✖ child test left in queue: t.test General Bluetooth test
+       - ✖ child test left in queue: t.test Reload supervisor on a running device
+       - ✖ child test left in queue: t.test Boot/Shutdown splash screen
+       - ✖ child test left in queue: t.test Kernel boot logo/Reboot splash screen
+       - ✖ child test left in queue: t.test Reboot while application is running
+       - ✖ child test left in queue: t.test Enable serial port on UART0/ttyAMA0
+       - ✖ child test left in queue: t.test Enable serial port on UART1/MiniUART/ttyS0
+       - ✖ child test left in queue: t.test Set device service variable when application is running
+
+
+      # Summary
+
+      - planned: 3
+
+      - pass: 1
+
+      - fail: 16
+
+
+      # Fails
+
+      ## Balena host OS update [2.15.1+rev2.prod -> 2.26.0+rev1.prod]
+          ✖ Balena host OS update [2.15.1+rev2.prod -> 2.26.0+rev1.prod]
+          undefined
+      ## Identification LED
+          ✖ Identification LED
+          undefined
+      ## child test left in queue: t.test Push a mono-container to the
+      application
+          ✖ child test left in queue: t.test Push a mono-container to the application
+          undefined
+      ## child test left in queue: t.test Enter running application container
+          ✖ child test left in queue: t.test Enter running application container
+          undefined
+      ## child test left in queue: t.test Sync application container
+          ✖ child test left in queue: t.test Sync application container
+          undefined
+      ## child test left in queue: t.test Update device status with
+      resin-device-progress
+          ✖ child test left in queue: t.test Update device status with resin-device-progress
+          undefined
+      ## child test left in queue: t.test Update supervisor through the API
+          ✖ child test left in queue: t.test Update supervisor through the API
+          undefined
+      ## child test left in queue: t.test Push a multi-container application
+          ✖ child test left in queue: t.test Push a multi-container application
+          undefined
+      ## child test left in queue: t.test General Bluetooth test
+          ✖ child test left in queue: t.test General Bluetooth test
+          undefined
+      ## child test left in queue: t.test Reload supervisor on a running device
+          ✖ child test left in queue: t.test Reload supervisor on a running device
+          undefined
+      ## child test left in queue: t.test Boot/Shutdown splash screen
+          ✖ child test left in queue: t.test Boot/Shutdown splash screen
+          undefined
+      ## child test left in queue: t.test Kernel boot logo/Reboot splash screen
+          ✖ child test left in queue: t.test Kernel boot logo/Reboot splash screen
+          undefined
+      ## child test left in queue: t.test Reboot while application is running
+          ✖ child test left in queue: t.test Reboot while application is running
+          undefined
+      ## child test left in queue: t.test Enable serial port on UART0/ttyAMA0
+          ✖ child test left in queue: t.test Enable serial port on UART0/ttyAMA0
+          undefined
+      ## child test left in queue: t.test Enable serial port on
+      UART1/MiniUART/ttyS0
+          ✖ child test left in queue: t.test Enable serial port on UART1/MiniUART/ttyS0
+          undefined
+      ## child test left in queue: t.test Set device service variable when
+      application is running
+          ✖ child test left in queue: t.test Set device service variable when application is running
+          undefined
+    timestamp: 2018-11-7
+    PS_UUID: 772f9090-e27f-11e8-acf1-972ff31e4e39
+  - body: |-
       # Tests 
 
 
