--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-11-7
+    PS_UUID: eb2e7f10-e289-11e8-b840-ef22e11e8bee
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-7
     PS_UUID: a23852f0-e288-11e8-8a51-1342eb304de9
   - provision_time: 1m 7s
     image_size: 1724 Mb
