--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-11-7
+    PS_UUID: 50e03590-e28c-11e8-97cc-7badfc699523
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-7
     PS_UUID: eb2e7f10-e289-11e8-b840-ef22e11e8bee
   - body: |-
       # Tests 
