--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,53 @@
 results:
   -
-    provision_time: 1m 8s
+    body: >-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Image filename format
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✔ Identification LED
+       - ✔ Push a mono-container to the application
+       - ✔ Enter running application container
+       - ✔ Sync application container
+       - ✔ Update device status with resin-device-progress
+       - ✔ Update supervisor through the API
+       - ✔ Push a multi-container application
+       - ✔ General Bluetooth test
+       - ✔ Reload supervisor on a running device
+       - ✖ Boot/Shutdown splash screen
+       - ✖ child test left in queue: t.test Kernel boot logo/Reboot splash screen
+       - ✖ child test left in queue: t.test Reboot while application is running
+       - ✖ child test left in queue: t.test Set device service variable when application is running
+
+
+      # Summary
+
+      - planned: 14
+
+      - pass: 13
+
+      - fail: 4
+
+
+      # Fails
+
+      ## Boot/Shutdown splash screen
+          ✖ Boot/Shutdown splash screen
+          undefined
+      ## child test left in queue: t.test Kernel boot logo/Reboot splash screen
+          ✖ child test left in queue: t.test Kernel boot logo/Reboot splash screen
+          undefined
+      ## child test left in queue: t.test Reboot while application is running
+          ✖ child test left in queue: t.test Reboot while application is running
+          undefined
+      ## child test left in queue: t.test Set device service variable when
+      application is running
+          ✖ child test left in queue: t.test Set device service variable when application is running
+          undefined
+    timestamp: 2018-11-7
+    PS_UUID: d8a02050-e294-11e8-94ce-d12b7021f8b3
+  - provision_time: 1m 8s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
