--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,34 @@
 results:
   -
-    body: >-
+    provision_time: 1m 8s
+    image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✖ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 8
+      - fail: 1
+
+      # Fails
+      ## Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+          ✖ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+          undefined
+    author: null
+    timestamp: 2018-11-7
+    PS_UUID: 61157c90-e296-11e8-b0b3-a532310a4d6b
+  - body: >-
       # Tests 
        - ✔ Device is online
        - ✔ Image filename format
