--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    body: >-
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-9
+    PS_UUID: 9214e520-e411-11e8-b7b8-655221bf3ea2
+  - body: >-
       # Tests 
        - ✔ Device is online
        - ✖ Reboot while application is running
