--- a/results.yaml
+++ b/results.yaml
@@ -2,6 +2,18 @@ results:
   -
     body: |-
       # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-13'
+    PS_UUID: 33579900-e732-11e8-8ed6-4b346072175b
+  - body: |-
+      # Tests 
        - ✔ Device is online
        - ✔ Image filename format
        - ✔ Device reported hostOS version
