--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    body: >-
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-15'
+    PS_UUID: d7a1ac80-e8bd-11e8-9de5-47f4aea2be00
+  - body: >-
       # Tests 
        - ✔ Device is online
        - ✖ General Bluetooth test
