--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,45 @@
 results:
   -
-    body: >-
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Image filename format
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev3.prod -> 2.26.0+rev3.prod]
+       - ✔ Push a mono-container to the application
+       - ✔ Add a device environment variable
+       - ✔ Enter running application container
+       - ✔ Sync application container
+       - ✖ Update device status with resin-device-progress
+       - ✔ Update supervisor through the API
+       - ✔ Push a multi-container application
+       - ✔ Reload supervisor on a running device
+       - ✖ Boot/Shutdown splash screen
+       - ✖ child test left in queue: t.test Kernel boot logo/Reboot splash screen
+       - ✖ child test left in queue: t.test Reboot while application is running
+
+
+      # Summary
+      - planned: 13
+      - pass: 11
+      - fail: 4
+
+      # Fails
+      ## Update device status with resin-device-progress
+          ✖ Update device status with resin-device-progress
+          undefined
+      ## Boot/Shutdown splash screen
+          ✖ Boot/Shutdown splash screen
+          undefined
+      ## child test left in queue: t.test Kernel boot logo/Reboot splash screen
+          ✖ child test left in queue: t.test Kernel boot logo/Reboot splash screen
+          undefined
+      ## child test left in queue: t.test Reboot while application is running
+          ✖ child test left in queue: t.test Reboot while application is running
+          undefined
+    timestamp: '2018-11-16'
+    PS_UUID: d2aa4420-e98b-11e8-83af-a1ec75149f4c
+  - body: >-
       # Tests 
        - ✔ Device is online
        - ✔ Reboot while application is running
