--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 13s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-20'
+    PS_UUID: b4bd6e00-ecb1-11e8-801c-03d2ff722c8b
+  - provision_time: 1m 13s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
