--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    body: >-
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-21'
+    PS_UUID: 3d407440-edc3-11e8-b3d0-13f7a671ef79
+  - body: >-
       # Tests 
        - ✔ Device is online
        - ✖ Image filename format
