--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: '2018-11-21'
+    PS_UUID: 84c1a1b0-edc6-11e8-93f7-0d7d451be223
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-21'
     PS_UUID: a5511ed0-edc4-11e8-b792-1f8f0f059218
   - body: |-
       # Tests 
