--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: '2018-11-21'
+    PS_UUID: c1bfb2f0-edcb-11e8-b4b0-1bc7cb801153
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-21'
     PS_UUID: afa13560-edc8-11e8-90d7-c50c8778b20a
   - body: |-
       # Tests 
