--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,70 @@
 results:
   -
-    body: |-
+    body: >-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Image filename format
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev2.prod]
+       - ✔ Push a mono-container to the application
+       - ✔ Add a device environment variable
+       - ✖ Enter running application container
+       - ✖ child test left in queue: t.test Sync application container
+       - ✖ child test left in queue: t.test Update device status with resin-device-progress
+       - ✖ child test left in queue: t.test Update supervisor through the API
+       - ✖ child test left in queue: t.test Push a multi-container application
+       - ✖ child test left in queue: t.test Reload supervisor on a running device
+       - ✖ child test left in queue: t.test General Bluetooth test
+       - ✖ child test left in queue: t.test Boot/Shutdown splash screen
+       - ✖ child test left in queue: t.test Kernel boot logo/Reboot splash screen
+       - ✖ child test left in queue: t.test Reboot while application is running
+
+
+      # Summary
+
+      - planned: 7
+
+      - pass: 6
+
+      - fail: 10
+
+
+      # Fails
+
+      ## Enter running application container
+          ✖ Enter running application container
+          undefined
+      ## child test left in queue: t.test Sync application container
+          ✖ child test left in queue: t.test Sync application container
+          undefined
+      ## child test left in queue: t.test Update device status with
+      resin-device-progress
+          ✖ child test left in queue: t.test Update device status with resin-device-progress
+          undefined
+      ## child test left in queue: t.test Update supervisor through the API
+          ✖ child test left in queue: t.test Update supervisor through the API
+          undefined
+      ## child test left in queue: t.test Push a multi-container application
+          ✖ child test left in queue: t.test Push a multi-container application
+          undefined
+      ## child test left in queue: t.test Reload supervisor on a running device
+          ✖ child test left in queue: t.test Reload supervisor on a running device
+          undefined
+      ## child test left in queue: t.test General Bluetooth test
+          ✖ child test left in queue: t.test General Bluetooth test
+          undefined
+      ## child test left in queue: t.test Boot/Shutdown splash screen
+          ✖ child test left in queue: t.test Boot/Shutdown splash screen
+          undefined
+      ## child test left in queue: t.test Kernel boot logo/Reboot splash screen
+          ✖ child test left in queue: t.test Kernel boot logo/Reboot splash screen
+          undefined
+      ## child test left in queue: t.test Reboot while application is running
+          ✖ child test left in queue: t.test Reboot while application is running
+          undefined
+    timestamp: '2018-11-22'
+    PS_UUID: d49558d0-ee4d-11e8-b70b-6d5a117ec490
+  - body: |-
       # Tests 
        - ✔ Device is online
        - ✔ Image filename format
