--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: '2018-11-22'
+    PS_UUID: 6a9e0000-ee64-11e8-8a5f-f7d8b40737a5
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-22'
     PS_UUID: 0c6a3f30-ee64-11e8-9170-a9578705a127
   - body: |-
       # Tests 
