--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: '2018-11-22'
+    PS_UUID: 6236e600-ee66-11e8-af0e-bbcba69a51bc
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-22'
     PS_UUID: 244af580-ee65-11e8-992d-815fe1297d6b
   - body: |-
       # Tests 
