--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,43 @@
 results:
   -
-    provision_time: 1m 8s
+    provision_time: 1m 14s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✖ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✖ Image filename format
+       - ✖ Push a mono-container to the application
+       - ✖ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 5
+      - fail: 4
+
+      # Fails
+      ## Device reported hostOS version
+          ✖ Device reported hostOS version
+          undefined
+      ## Image filename format
+          ✖ Image filename format
+          undefined
+      ## Push a mono-container to the application
+          ✖ Push a mono-container to the application
+          undefined
+      ## Push a multi-container application
+          ✖ Push a multi-container application
+          undefined
+    author: null
+    timestamp: '2018-11-22'
+    PS_UUID: 7320b320-ee74-11e8-b68d-b7aa069cfebc
+  - provision_time: 1m 8s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
