--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 14s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-22'
+    PS_UUID: 78872130-ee7b-11e8-a1c3-89354abdec80
+  - provision_time: 1m 14s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
