--- a/results.yaml
+++ b/results.yaml
@@ -7,6 +7,43 @@ results:
       # Tests 
        - ✔ Device is online
        - ✖ Device reported hostOS version
+       - ✖ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✖ Image filename format
+       - ✖ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 5
+      - fail: 4
+
+      # Fails
+      ## Device reported hostOS version
+          ✖ Device reported hostOS version
+          undefined
+      ## Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+          ✖ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+          undefined
+      ## Image filename format
+          ✖ Image filename format
+          undefined
+      ## Push a mono-container to the application
+          ✖ Push a mono-container to the application
+          undefined
+    author: null
+    timestamp: '2018-11-22'
+    PS_UUID: d7f1b350-ee86-11e8-8fcc-2d64aacfe02c
+  - provision_time: 1m 8s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✖ Device reported hostOS version
        - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
        - ✖ Image filename format
        - ✔ Push a mono-container to the application
