Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 9s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-26'
+    PS_UUID: 57ac5120-f118-11e8-bfda-89f9012e643c
+  - provision_time: 1m 9s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
